--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   lottie: ^3.3.1
   fluttertoast: ^8.2.12
   url_launcher: ^6.3.2
+  youtube_player_flutter: ^9.1.2
+  youtube_explode_dart: ^2.5.2
 
 dev_dependencies:
   flutter_test:
