--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   url_launcher: ^6.3.2
   youtube_player_flutter: ^9.1.2
   youtube_explode_dart: ^2.5.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
