--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   youtube_player_flutter: ^9.1.2
   youtube_explode_dart: ^2.5.2
   intl: ^0.20.2
+  overlay_support: ^2.1.0
 
 dev_dependencies:
   flutter_test:
