--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   youtube_explode_dart: ^2.5.2
   intl: ^0.20.2
   overlay_support: ^2.1.0
+  connectivity_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
