--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,8 @@ flutter:
     - assets/fonts/
     - assets/anim/
     - assets/tool_logos/
+    - assets/kuwaia_icons/
+    - assets/kuwaia_icons/main/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
