--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   overlay_support: ^2.1.0
   connectivity_plus: ^7.0.0
   shimmer: ^3.0.0
+  video_player: ^2.10.0
 
 dev_dependencies:
   flutter_test:
